# racers-portable

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  reccmp-project.yml
.github/workflows/: build.yml  ci.yml  shaders.yml
GolDP/: goldp_export.h  library_msvc.h
GolDP/include/: boundingvolume0x64.h  bronzefalcon0xc8770.h  cinderbasin0x28.h  floatyboat0x28.h  floatycanoe0x90.h  floatyferry0xf4.h  floatyfrigate0x9c.h  floatypontoon0x4c.h  fluffygloomkins0x118.h  gdbcommonvertexarray0x1c.h  gdbmodel0x48.h  gdbvertexarray0xc.h  gdbvertexarraymistery0x1c.h  gdbvertexarraytypeone0x1c.h  gdbvertexarraytypethree0x20.h  gdbvertexarraytypetwo0x20.h  golddune0x38.h  golfont0xa0.h  golfontbase0x40.h  igdbmodel0x40.h  purpledune0x7c.h  shadowwolf0xc.h  whitebaffoon0x50.h  whitefalcon0x140.h  zoweeblubberworth0xf0.h
GolDP/include/camera/: golcamera.h  golcamerabase.h  goltransform.h
GolDP/include/core/: gol.h
GolDP/include/font/: golfontlibrary.h  golfonttable.h
GolDP/include/image/: goltiledtexture.h
GolDP/include/material/: golimagedefinitionlist.h  golimagelist.h  goltexturelist.h
GolDP/include/render/: golcommondrawstate.h  gold3drenderdevice.h  goldrawstate.h
GolDP/include/scene/: golbillboard.h
GolDP/include/surface/: gold3dtexture.h  golrendertarget.h  silverdune0x30.h
GolDP/include/world/: golworlddatabase.h
GolDP/portable/: golsoftwarerendererstub.cpp
GolDP/src/: boundingvolume0x64.cpp  bronzedune0x4c.cpp  bronzefalcon0xc8770.cpp  cinderbasin0x28.cpp  floatyboat0x28.cpp  floatycanoe0x90.cpp  floatyferry0xf4.cpp  floatyfrigate0x9c.cpp  floatypontoon0x4c.cpp  fluffygloomkins0x118.cpp  gdbcommonvertexarray0x1c.cpp  gdbmodel0x48.cpp  gdbvertexarray0xc.cpp  gdbvertexarraymistery0x1c.cpp  gdbvertexarraytypeone0x1c.cpp  gdbvertexarraytypethree0x20.cpp  gdbvertexarraytypetwo0x20.cpp  golfont0xa0.cpp  golfontbase0x40.cpp  hypnoticnoise0x1c.cpp  igdbmodel0x40.cpp  shadowwolf0xc.cpp  utopianpan0xa4.cpp  whitebaffoon0x50.cpp  whitefalcon0x140.cpp  zoweeblubberworth0xf0.cpp
GolDP/src/core/: goldpexport.cpp
GolDP/src/device/: goldirectdrawpalette.cpp
GolDP/src/font/: golfontlibrary.cpp
GolDP/src/image/: whitebaffoon0x50.cpp
GolDP/src/material/: golimagelist.cpp
GolDP/src/render/: golcommondrawstate.cpp  gold3drenderdevice.cpp  goldrawdpstate.cpp  goldrawstate.cpp  golrenderdevice.cpp  golsoftwarerenderer.cpp
GolDP/src/scene/: golbillboardex.cpp
LEGORacers/emscripten/: emscripten.patch  filesystem.cpp  filesystem.h  serve.py  shell.html
LEGORacers/include/: coppercrest0x40.h  crimsonsun0xa4.h  displaydriverguid.h  imaginarydrillfieldat0x420.h  imaginarynotion0x290.h  imaginarytool0x368.h  legoracers.h  obscureicon0x1a8.h  obscuresigil0xdc.h  obscurevantage0x58.h  opalhaven0xf4.h  peridottrace0x4e0.h  saffronquartz0x2c.h  scarletnova0x5c.h  silverhollow0xb8.h
LEGORacers/include/app/: legoracers.h
LEGORacers/include/audio/: musicgroupstate.h  soundnode.h
LEGORacers/include/menu/: menuanimationlist.h  menumanager.h
LEGORacers/include/model/: gdbpartlibrary0x1c.h  sapphirereef0x2030.h
LEGORacers/include/race/: circuitstandings.h  cobalttrail0x140.h  loadingscreen.h  playercontrols.h  racecameracontroller.h  raceeventrecord.h  racepowerupmanager.h  racercollisionworlds.h  racereset.h  raceresourcemanager.h  racertriggerlist.h  racesession.h  racesessionfield0x27d4.h  racestate.h  racetimerlist.h  slatebridge0x68.h  surfacetable.h  timeracemanager.h  triggerlist.h
LEGORacers/include/racer/: siennacircuit0x154.h  turquoiseglowcolor.h
LEGORacers/include/save/: peridottrace0x4e0.h
LEGORacers/include/util/: amethystbreeze0x104.h  legoeventqueue.h  marblepath0x114.h  onyxbreeze0x248.h  particlesystem.h
LEGORacers/include/video/: avireader.h  videoplayer.h
LEGORacers/src/: coppercrest0x40.cpp  crimsonsun0xa4.cpp  crimsonsun0xa4entry.cpp  imaginarydrillfieldat0x420.cpp  imaginarydrillfieldat0x498.cpp  imaginarynotion0x290.cpp  imaginarytool0x368.cpp  menumanager.cpp  obscureanchor0x5c.cpp  obscureicon0x1a8.cpp  obscuresigil0xdc.cpp  obscurevantage0x58.cpp  opalhaven0xf4.cpp  peridottrace0x4a8.cpp  peridottrace0x4e0.cpp  peridottraceactionbase0x34.cpp  peridottracestate0x438.cpp  saffronquartz0x2c.cpp  silverhollow0xb8.cpp  whitefalcon0x140light.cpp  whitefalcon0x140materialcolor.cpp  zoweeblubberworth0xf0.cpp
cmake/: aarch64-toolchain.cmake
common/include/: golanimatedentity.h  golbmpfile.h  golbyteorder.h  golconstants.h  golddune0x38.h  golfileparser.h  golimgfile.h  gollist.h  golmath.h  golmodelentity.h  golorientedentity.h  golstring.h  golstringtable.h  golworldentity.h  mabmaterialanimationitem0x18.h
common/src/: duskwindbananarelic0x24.cpp  golanimatedentity.cpp  golbmpfile.cpp  golboundingshape.cpp  golconstants.cpp  golfilesource.cpp  golfontbase.cpp  golfsutil.cpp  golimgfile.cpp  golstream.cpp  golstring.cpp  golstringtable.cpp
docs/: PORTING.md
miniwin/: CMakeLists.txt
miniwin/include/miniwin/: d3d.h  d3dcaps.h  d3dtypes.h  ddraw.h  dinput.h  dsound.h  miniwinapp.h  mmsystem.h  objbase.h  touch.h  windows.h
miniwin/include/shims/: direct.h  io.h
miniwin/src/d3d/: d3d.cpp  d3ddevice.cpp
miniwin/src/d3d/backends/: backends.cpp  backends.h  overlay.cpp  overlay.h
miniwin/src/d3d/backends/opengl3/: renderer.cpp
miniwin/src/d3d/backends/opengles3/: es3loader.h  renderer.cpp
miniwin/src/d3d/backends/sdlgpu/: renderer.cpp
miniwin/src/d3d/backends/sdlgpu/shaders/: gen_shaders.py
miniwin/src/d3d/backends/sdlgpu/shaders/src/: scene.frag  scene.vert
miniwin/src/ddraw/: ddpalette.cpp  ddraw.cpp  ddsurface.cpp
miniwin/src/dinput/: dinput.cpp  touch.cpp
miniwin/src/dsound/: dsound.cpp
miniwin/src/internal/: ddraw_impl.h  handles.h  miniwin.h  renderbackend.h  touchoverlay.h
miniwin/src/windows/: events.cpp  files.cpp  guids.cpp  handles.cpp  mmsystem.cpp  registry.cpp  windows.cpp
reccmp/: goldp-function-size.csv  lego-racers-ascii.csv  lego-racers-floats.csv
tools/: check_folded.py  reccmp_addr_padding.py
tools/ncc/: skip.yml
tools/ncc/ncc/: ncc.style  (+1 more)
util/: compat.h  types.h
(+204 files in other folders)
